fixed the /collections/queryables Endpoint in all files and small fix in OpenAPI.yaml
